<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/RL1">
		<TextView android:id="@+id/mainTextviewLogin"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/loginColon" android:layout_marginLeft="30sp"
			android:layout_marginTop="45sp" android:paddingRight="5sp"
			android:textSize="20sp" />
		<EditText android:id="@+id/mainEdittextLogin"
			android:layout_width="150sp" android:layout_height="40sp"
			android:layout_toRightOf="@+id/mainTextviewLogin"
			android:layout_marginTop="40sp" />
		<TextView android:id="@+id/mainTextviewPassword"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/passwordColon" android:layout_alignLeft="@+id/mainTextviewLogin"
			android:layout_marginTop="50sp" android:paddingRight="5sp"
			android:textSize="20sp" android:layout_below="@+id/mainTextviewLogin" />
		<EditText android:id="@+id/mainEdittextPassword"
			android:layout_width="150sp" android:layout_height="40sp"
			android:layout_toRightOf="@+id/mainTextviewPassword"
			android:layout_below="@+id/mainEdittextLogin"
			android:layout_alignLeft="@+id/mainEdittextLogin"
			android:layout_marginTop="40sp" android:password="true" />
		<CheckBox android:id="@+id/mainCheckboxRememberme"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignLeft="@id/mainEdittextLogin"
			android:layout_below="@+id/forgo" android:layout_marginTop="10sp"
			android:text="@string/rememberMe" android:textSize="15sp" />
		<Button android:id="@+id/mainButtonLogin" android:layout_width="150sp"
			android:layout_height="wrap_content" android:layout_below="@+id/mainCheckboxRememberme"
			android:layout_alignLeft="@+id/mainEdittextLogin"
			android:paddingRight="15sp" android:layout_marginTop="10sp"
			android:paddingLeft="15sp" android:text="@string/login" />
		<TextView android:id="@+id/mainTextviewRegister"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/registerClick" android:paddingLeft="35sp"
			android:layout_below="@+id/mainButtonLogin" android:layout_marginTop="10sp"
			android:textSize="18sp" />

		<TextView android:id="@+id/forgo" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="Forgot Password ? Click here"
			android:layout_below="@+id/mainEdittextPassword"
			android:layout_alignLeft="@+id/mainEdittextPassword"
			android:layout_marginTop="20sp" android:textSize="16sp" />

	</RelativeLayout>
</ScrollView>